Feat: added producer and fix the avro trouble I had